# HPC_PRACTICE

./: .clang-tidy  .clangd  .gitignore  BCAddKernel.cu  CMakeLists.txt  Makefile  MulMatrixByCublas.cu  MulMatrixNative.cu  MulMatrixOnDevice.cu  MulMatrixOnDeviceOptBySharedMem.cu  MulMatrixOnDeviceOptBySharedMemAndRegister.cu  README.md  addNum.cu  fileoutput.txt  gen_num.cu  main.cu  matrixMul.cu  memory_bandwith.md  ndsl_build.sh  random_numbers.txt  test.cu
Assist/: CCheckResult.cpp  CInitialData.cpp  CMakeLists.txt  CPrintMatrix.cpp  CTransPoseSolution.cpp  Harem_copy.cpp
DASP/: Makefile  README.md
DASP/script/: f16_bar.py  f16_scatter.py  f64_bar.py  f64_scatter.py  matrix_download.py  preprocess_scatter.py  process_data.py  run.sh  run21.sh  run_spmv.sh  run_spmv_all.sh
DASP/spmv_code/CSR5_cuda/: Makefile
DASP/spmv_code/CSR5_cuda/detail/cuda/: utils_cuda.h
DASP/spmv_code/TileSpMV/src/: Makefile  common.h  csr2tile.h  main.cu  tilespmv_cuda.h
DASP/src/: dasp_f16.h  dasp_f64.h  main_f16.cu  main_f64.cu  mmio_highlevel.h  utils.h
DASP/test/: run_test.sh
GEMM/: CMakeLists.txt  GEMM_coalesce.cu  GEMM_cublas.cu  GEMM_native.cu  GEMM_sharedmemblock.cu  helloworld.cu  imageRotation.cu  imageRotationShared.cu
GEMM/src/: CMakeLists.txt  SayHello.cpp
LLM/: ConvTranspose3d.py  resnet_model.py  torch_linalg_inv.py  trace.json
LLM/FFN/: FFN_test.py  network.py  network2.py  w1.txt  w2.txt
LLM/attention/: dotProduct.py  multihead.py
LLM/test/: ConvTranspose3d.py  TicTacToe.py  torch_linalg_inv.json
LLM/triton/: simple_kernel.py  simple_test.py
include/: AddNumkernel.cuh  CCheckResult.h  CGemmWithC.h  CInitialData.h  CMatrixAdd.h  CMulMatrixGemm.h  CPrintMatrix.h  CTest.h  CTransPoseSolution.h  DASP_common.h  DASP_dasp_f64.h  DASP_mmio.h  Harem_copy.h  MulMatrixGemm.cuh  Num.h  myBase.cuh
kernel_test/: bank.md  bank_conflict.cu
kernel_test/CodeSamples/chapter01/: hello
kernel_test/CodeSamples/chapter02/: checkDeviceInfor  checkDeviceInfor.cu  checkDimension  checkDimension.cu  checkThreadIndex  defineGridBlock  defineGridBlock.cu  sumArraysOnGPU-small-case  sumArraysOnGPU-small-case.cu  sumArraysOnGPU-timer  sumArraysOnGPU-timer.cu  sumArraysOnHost  sumMatrixOnGPU  sumMatrixOnGPU-1D-grid-1D-block  sumMatrixOnGPU-2D-grid-1D-block  sumMatrixOnGPU-2D-grid-2D-block
kernel_test/CodeSamples/chapter08/: Makefile  cublas  cuda-openacc  cufft  cufft-multi  cusparse.cu  simple-data  simple-kernels  simple-parallel
kernel_test/Vector_add/: vector_add  vector_add.cu  vector_add_stream  vector_add_stream.cu
kernel_test/kernels/: 3_kernel_shared_mem_blocking.cuh  4_kernel_1D_blocktiling.cuh  6_kernel_vectorize.cuh  7_kernel_resolve_bank_conflicts.cuh  8_kernel_bank_extra_col.cuh  kernels.cuh
kernels/: 10_kernel_warptiling.cuh  11_kernel_double_buffering.cuh  12_kernel_double_buffering.cuh  5_kernel_2D_blocktiling.cuh  9_kernel_autotuned.cuh  CMakeLists.txt  kernels.cuh
python/: test.py
src/: AddNumkernel.cu  CAddNumkernel.cpp  CGemmWithC.cpp  CInitialData.cpp  CMakeLists.txt  CMulMatrixGemm.cpp  CPrintMatrix.cpp  CTest.cpp  MulMatrixGemm.cu
src/include/: AddNumkernel.cuh  CAddNumkernel.h  CCheckResult.h  CGemmWithC.h  CPrintMatrix.h  DASP_dasp_f16.h  DASP_mmio_highlevel.h  DASP_utils.h  Num.h  common.h  test.cuh  utils.cuh
sunwei_test/: CMakeLists.txt  cp_async_example.cu  cuda_graph.cu  cuda_stream_add.cu  get_device_info  get_device_info.cu  my_module.cpp  sunwei  sunwei.cu  sunwei2  sunwei2.cu  sunwei_L2_modify  sunwei_L2_modify.cu  test.cu
test/: MulMatrixByCublas.cu  MulMatrixNative.cu  MulMatrixOnDevice.cu  MulMatrixOnDeviceOptBySharedMemAndRegister.cu  cuda_graph.cu
